[project]
name = "theta-snapshot-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "boto3>=1.36.2",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "joblib>=1.3.2",
    "kaleido==0.2.1",
    "numpy>=1.26.4",
    "option-emporium>=0.0.43",
    "optuna-integration>=4.2.0",
    "pandas>=2.2.3",
    "pandas-market-calendars>=4.6.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.0",
    "pycaret",
    "pytelegrambotapi>=4.26.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.37",
    "tqdm>=4.67.1",
    "xgboost>=2.1.3",
]

[tool.uv.sources]
pycaret = { git = "https://github.com/pycaret/pycaret.git", rev = "master" }

[dependency-groups]
dev = ["ipykernel>=6.29.5", "optuna>=4.1.0", "seaborn>=0.13.2", "shap>=0.46.0"]
