[project]
name = "theta-snapshot-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "boto3>=1.36.2",
    "category-encoders>=2.8.0",
    "fastapi>=0.115.6",
    "flaml>=2.3.3",
    "httpx>=0.28.1",
    "joblib>=1.3.2",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "option-emporium>=0.0.43",
    "pandas>=2.2.3",
    "pandas-market-calendars>=4.6.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.0",
    "pytelegrambotapi>=4.26.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.37",
    "tqdm>=4.67.1",
    "xgboost>=2.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1"
]
